--- a/turing-ui/projects/console/src/index.html
+++ b/turing-ui/projects/console/src/index.html
@@ -56,7 +56,7 @@
       <ul
         class="list-style-none d-flex flex-wrap col-12 col-lg-5 flex-justify-center flex-lg-justify-between mb-2 mb-lg-0">
         <li class="mr-3 mr-lg-0">© 2024 Turing ES.</li>
-        <li class="mr-3 mr-lg-0"><a href="https://github.com/openturing" target="_blank">Github</a></li>
+        <li class="mr-3 mr-lg-0"><a href="https://github.com/openviglet" target="_blank">Github</a></li>
         <li class="mr-3 mr-lg-0"><a href="/swagger-ui.html" target="_blank">API</a></li>
         <li class="mr-3 mr-lg-0"><a href="/console" target="_blank">Console</a></li>
       </ul>
